--- a/FirstIosProject/package.json
+++ b/FirstIosProject/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "lodash.remove": "^4.7.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.5.1",
-    "react-native-screens": "3.18.1"
+    "react-native-screens": "3.18.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
